deployment settings